[gd_scene load_steps=29 format=3 uid="uid://c7w06rdclh4r0"]

[ext_resource type="Script" path="res://scenes/main_scenes/Menu.gd" id="1_5r3os"]
[ext_resource type="Theme" uid="uid://cn83a0xrk33ty" path="res://scenes/menus/themes/MenuTheme.tres" id="1_lakh0"]
[ext_resource type="Texture2D" uid="uid://chqddb8lndj24" path="res://assets/image/menu/MenuBackground.png" id="2_t0ayx"]
[ext_resource type="Shader" path="res://scenes/environment/Clouds.gdshader" id="3_deo1s"]
[ext_resource type="Texture2D" uid="uid://c7e11237n0hy6" path="res://assets/image/environment/CloudsSmall.png" id="4_nox1h"]
[ext_resource type="Script" path="res://scenes/environment/ScrollingSprite2D.gd" id="5_l53r8"]
[ext_resource type="Texture2D" uid="uid://vsdswacwte5t" path="res://assets/image/menu/Tower.png" id="6_ab6qd"]
[ext_resource type="Texture2D" uid="uid://by337dabguqd2" path="res://assets/image/menu/peek/peek-default.png" id="7_usq7t"]
[ext_resource type="Texture2D" uid="uid://bem7v8unaw2ut" path="res://assets/image/menu/peek/peek1.png" id="8_ilypx"]
[ext_resource type="Texture2D" uid="uid://dk33hijxta2jk" path="res://assets/image/menu/peek/peek2.png" id="9_7jcb1"]
[ext_resource type="Texture2D" uid="uid://c6hd2ytheilc2" path="res://assets/image/menu/peek/peek3.png" id="10_tieqw"]
[ext_resource type="Texture2D" uid="uid://dhgc7u0k7jo2q" path="res://assets/image/menu/peek/peek4.png" id="11_xrgpq"]
[ext_resource type="Texture2D" uid="uid://dxc5gail5ovht" path="res://assets/image/menu/peek/peek5.png" id="12_ckrw5"]
[ext_resource type="Texture2D" uid="uid://xy23xhrse02r" path="res://assets/image/menu/peek/peek6.png" id="13_a6mmo"]
[ext_resource type="Texture2D" uid="uid://cb6urwyj6av2m" path="res://assets/image/menu/TitleBlur.png" id="14_iptvx"]
[ext_resource type="Texture2D" uid="uid://cnh3cclx3l4wf" path="res://assets/image/menu/Title.png" id="15_2ogof"]
[ext_resource type="Texture2D" uid="uid://dhpsn88s4c82f" path="res://assets/image/menu/ButtonPlay.png" id="17_bopym"]
[ext_resource type="Texture2D" uid="uid://bwlwsquxtw0i4" path="res://assets/image/menu/ButtonPlayHovered.png" id="18_j6vk4"]
[ext_resource type="Texture2D" uid="uid://c772bkakpgayg" path="res://assets/image/menu/ButtonOptionsHovered.png" id="19_xhi6b"]
[ext_resource type="Texture2D" uid="uid://brpgvpkaimgn1" path="res://assets/image/menu/ButtonOptions.png" id="20_g5e5y"]
[ext_resource type="Texture2D" uid="uid://p2o6gk44vlvl" path="res://assets/image/menu/ButtonQuit.png" id="21_wce5n"]
[ext_resource type="Texture2D" uid="uid://brb4f51lxrv4i" path="res://assets/image/menu/ButtonQuitHovered.png" id="22_gowm8"]
[ext_resource type="PackedScene" uid="uid://dklv0cnm5yyfk" path="res://scenes/menus/OptionsMenu.tscn" id="23_q2bfs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dotrv"]
shader = ExtResource("3_deo1s")
shader_parameter/scroll_offset = -0.05
shader_parameter/brightness = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_vrgvc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_usq7t")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ilypx")
}, {
"duration": 1.0,
"texture": ExtResource("9_7jcb1")
}, {
"duration": 1.0,
"texture": ExtResource("10_tieqw")
}, {
"duration": 1.0,
"texture": ExtResource("11_xrgpq")
}, {
"duration": 1.0,
"texture": ExtResource("12_ckrw5")
}, {
"duration": 5.0,
"texture": ExtResource("13_a6mmo")
}, {
"duration": 1.0,
"texture": ExtResource("12_ckrw5")
}, {
"duration": 1.0,
"texture": ExtResource("11_xrgpq")
}, {
"duration": 1.0,
"texture": ExtResource("10_tieqw")
}, {
"duration": 1.0,
"texture": ExtResource("9_7jcb1")
}, {
"duration": 1.0,
"texture": ExtResource("8_ilypx")
}],
"loop": false,
"name": &"peek",
"speed": 10.0
}]

[sub_resource type="GDScript" id="GDScript_1n124"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	animation_finished.connect(_on_animation_finished)
	await Timing.create_timer(self, 2.5)
	peek()

func peek():
	animation = \"peek\"
	play()
	await Timing.create_timer(self, randf_range(2, 20))
	peek()

func _on_animation_finished():
	animation = \"default\"
"

[sub_resource type="GDScript" id="GDScript_f5rk7"]
script/source = "extends VBoxContainer


# Called when the node enters the scene tree for the first time.
func _ready():
	create_tween().tween_property(self, \"modulate:a\", 1.0, 1.5).set_trans(Tween.TRANS_CUBIC).set_ease(Tween.EASE_OUT)
"

[sub_resource type="GDScript" id="GDScript_4vqcu"]
script/source = "extends Camera2D


# Called when the node enters the scene tree for the first time.
func _ready():
	create_tween().tween_property(self, \"zoom\", Vector2(3,3), 2.0).set_trans(Tween.TRANS_CUBIC)\\
	.set_ease(Tween.EASE_IN_OUT).set_delay(0.2)
	create_tween().tween_property(self, \"offset\", Vector2.ZERO, 2.0).set_trans(Tween.TRANS_CUBIC)\\
	.set_ease(Tween.EASE_OUT)
"

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5r3os")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_t0ayx")

[node name="SmallClouds" type="Sprite2D" parent="Background"]
material = SubResource("ShaderMaterial_dotrv")
position = Vector2(0, -73.5483)
texture = ExtResource("4_nox1h")
script = ExtResource("5_l53r8")

[node name="Tower" type="Sprite2D" parent="Background"]
texture = ExtResource("6_ab6qd")

[node name="Window" type="AnimatedSprite2D" parent="Background/Tower"]
sprite_frames = SubResource("SpriteFrames_vrgvc")
script = SubResource("GDScript_1n124")

[node name="TitleBlur" type="Sprite2D" parent="Background"]
texture = ExtResource("14_iptvx")

[node name="Title" type="Sprite2D" parent="Background"]
texture = ExtResource("15_2ogof")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -131.0
offset_top = -50.0
offset_right = 29.0
offset_bottom = 147.0
theme = ExtResource("1_lakh0")
theme_override_constants/separation = 5
alignment = 1
script = SubResource("GDScript_f5rk7")

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("17_bopym")
texture_pressed = ExtResource("18_j6vk4")
texture_hover = ExtResource("18_j6vk4")

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
modulate = Color(0.886262, 0.886261, 0.886262, 1)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("20_g5e5y")
texture_pressed = ExtResource("19_xhi6b")
texture_hover = ExtResource("19_xhi6b")

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
modulate = Color(0.699653, 0.699653, 0.699653, 1)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("21_wce5n")
texture_pressed = ExtResource("22_gowm8")
texture_hover = ExtResource("22_gowm8")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -47.92)
zoom = Vector2(5.395, 5.395)
script = SubResource("GDScript_4vqcu")

[node name="OptionsMenu" parent="." instance=ExtResource("23_q2bfs")]
layout_mode = 1
offset_left = 11.5
offset_top = -25.0
offset_right = 189.5
offset_bottom = 106.0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
